Fixed item alignment issues

--- a/homework_5/style.css
+++ b/homework_5/style.css
@@ -167,7 +167,11 @@ fieldset {
 /* Style the Customers Reviews Section */
 .shop_cat, .shop_dog {
   padding-top: 42px;
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 
 .quote, .customer {
   color: #D98560;
@@ -181,14 +185,11 @@ td {
   font-size: 60px;
 }
 
-#cat_button, #dog_button {
-  margin-left: 14.8%;
-}
-
 table {
   padding-top: 24px;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
 }
 
 /* Style the shop by category navigation section on product browsing pages */
@@ -272,7 +273,7 @@ table {
 .dog_product img {
   width: 337px;
   height: 238px;
-  padding-bottom: 10px
+  padding-bottom: 10px;
 }
 
 .single_product_text {
